Revelation changelog

---------------[ xxxx-xx-xx : 0.4.0 ]---------------

2005-01-07  Erik Grinaker <erikg@codepoet.no>

	* wrote more ui module unit tests (yawn)

2005-01-07  Erik Grinaker <erikg@codepoet.no>

	* wrote more ui module unit tests

2005-01-06  Erik Grinaker <erikg@codepoet.no>

	* various minor HIG tweaks

	* ui.generate_field_edit_widget() takes a field instance as argument
	instead of field type, and sets edit widget contents based on field
	value (corresponds with ui.generate_field_display_widget())

	* ui.Toolbar() no longer uses deprecated methods

	* wrote unit tests for ui module

2005-01-05  Erik Grinaker <erikg@codepoet.no>

	* rewrote the netrc datahandler, and wrote unit tests for it

	* updated the xhtml datahandler, and wrote unit tests for it

2005-01-04  Erik Grinaker <erikg@codepoet.no>

	* don't subclass gnome.ui.HRef (abstract widget from
	gnome-python 2.9.x - subclassing causes crash)

	* fall back to False for toolbar_detachable setting from GNOME

	* updated unit tests for util module

	* rewrote gpass datahandler, and wrote unit tests for it

	* updated copyright period to include 2005

2005-01-01  Erik Grinaker <erikg@codepoet.no>

	* renamed Makefile test target to check

2004-12-31  Erik Grinaker <erikg@codepoet.no>

	* updated the data module unit tests with new API

2004-12-21  Erik Grinaker <erikg@codepoet.no>

	* improved the main app class API

2004-12-17  Erik Grinaker <erikg@codepoet.no>

	* added clipboard chaining

	* added menu item for copying username and password chain
	to clipboard

	* removed option for copying username to PRIMARY on launch

2004-12-16  Erik Grinaker <erikg@codepoet.no>

	* used generic INSTALL instructions from automake

2004-12-15  Erik Grinaker <erikg@codepoet.no>

	* added a preference for launching entries on doubleclick

	* added a preference for copying username to PRIMARY selection
	when launching an entry

	* added gnome session manager support
